# pyCSM

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  MAINTAINERS.md  Notices.txt  README.md  properties.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: lint-test.yml  main.yml  python-publish.yml
authorization/: auth.py
clients/: client_hardware.py  client_ses.py  client_session.py  client_system.py  copyset.py  hardware_client.py  new_copyset.py  session_client.py  system_client.py
docs/: conf.py  environment.yaml  index.rst  requirements.txt
docs/authorization_docs/: authorization.rst
docs/clients_docs/: hardware_client.rst  session_client.rst  system_client.rst
docs/hardware_service_docs/: hardware.rst
docs/session_service_docs/: copysets.rst  schedule.rst  sessions.rst
docs/system_service_docs/: system.rst
hardware_service/: hardware.py  hardware_service.py
pyCSM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyCSM/authorization/: auth.py
pyCSM/clients/: hardware_client.py  session_client.py  system_client.py
pyCSM/services/hardware_service/: hardware_service.py
pyCSM/services/session_service/: copyset_service.py  schedule_service.py  session_service.py
pyCSM/services/system_service/: system_service.py
pyCSM/test/: README.md  requirements.txt  test_copyset_service.py  test_hardware_service.py  test_schedule_service.py  test_session_service.py  test_system_service.py
pyCSM/util/: utility.py
session_service/: copyset_service.py  copysets.py  schedule.py  schedule_service.py  session_service.py  sessions.py
system_service/: system.py  system_service.py
