[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCSM"
version = "1.0.8"
description = "CSM Python Client"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Dominic Blea", email = "dblea00@ibm.com"}
]
maintainers = [
    {name = "Dominic Blea", email = "dblea00@ibm.com"}
]
keywords = ["IBM", "CSM Storage"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "certifi>=2022.6.15",
    "requests>=2.28.0",
    "urllib3>=1.26.9",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".venv",
    "venv",
    ".tox",
    "*.egg-info",
]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["pyCSM/test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=pyCSM",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["pyCSM"]
omit = [
    "*/test/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]